<resources>
    <string name="app_name">ShadowPlayer</string>
    <string name="btnPlay">PLAY</string>
    <string name="btnReturn">RETURN</string>
    <string name="txtLevels">LEVELS</string>
    <string name="Level1">1</string>
    <string name="Level2">2</string>
    <string name="Level3">3</string>
    <string name="Level4">4</string>
    <string name="Level5">5</string>
    <string name="Level6">6</string>
    <string name="Level7">7</string>
    <string name="Level8">8</string>
    <string name="Level9">9</string>
</resources>