<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="270dp"
        android:layout_height="253dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="226dp"
            android:layout_height="26dp"
            android:padding="5dp">

            <Button
                android:id="@+id/btnLevel1"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:text="@string/Level1"
                android:onClick="level1"/>


            <Button
                android:id="@+id/btnLevel2"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:text="@string/Level2"
                android:onClick="level2"/>

            <Button
                android:id="@+id/btnLevel3"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:text="@string/Level3"
                android:onClick="level3"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <Button
                android:id="@+id/btnLevel4"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:text="@string/Level4"
                android:onClick="level4"/>

            <Button
                android:id="@+id/btnLevel5"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:text="@string/Level5"
                android:onClick="level5"/>

            <Button
                android:id="@+id/btnLevel6"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:text="@string/Level6"
                android:onClick="level6"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <Button
                android:id="@+id/btnLevel7"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:text="@string/Level7"
                android:onClick="level7"/>

            <Button
                android:id="@+id/btnLevel8"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:text="@string/Level8"
                android:onClick="level8"/>

            <Button
                android:id="@+id/btnLevel9"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:text="@string/Level9"
                android:onClick="level9"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/txtLevels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtLevels"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675" />

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="111dp"
        android:layout_height="61dp"
        android:onClick="back"
        android:text="@string/btnReturn"
        app:layout_constraintBottom_toTopOf="@+id/txtLevels"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238" />

</androidx.constraintlayout.widget.ConstraintLayout>